# dapil

./: .gitignore  404.html  CNAME  Cargo.toml  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
architecture/: index.html
benchmarks/: bolt_app.py  dapil.pid  dapil_multi.py  django_app.py  fastapi_app.py  feature_app.py  index.html  run_all.sh  run_all_scaling.sh  run_features.sh  run_isolated.sh  run_multi_all.sh
benchmarks/rust_bench/: Cargo.toml
docs/: architecture.md  benchmarks.md  features.md  index.md  logging.md
examples/: run_modular_example.py  validation_test.py
examples/dependency_injection/: app.py
examples/fastapi_interface/: main.py
examples/hello_world/: main.py
examples/modular_pydantic/: app.py  items.py  main.py
examples/modular_routing/: main.py  users.py
features/: index.html
logging/: index.html
python/dapil/: __init__.py  depends.py  exceptions.py  middleware.py  openapi.py  params.py  requests.py  responses.py  routing.py  websockets.py
search/: search_index.json
src/: lib.rs
