[package]
name = "dapil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_dapil"
crate-type = ["cdylib"]

[package.metadata.maturin]
python-source = "python"
module-name = "dapil._dapil"


[features]
experimental-async = []
rt-multi-thread = []

[dependencies]
axum = {version = "0.7.9"}
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
pyo3 = {version = "0.23.1", features = ["extension-module", "experimental-async"]}
pyo3-log = "0.12.0"
log = "0.4.22"
tokio = {version = "1.42.0", features = ["full"]}
tower-http = { version = "0.6.1", features = ["trace"] }
flume = "0.11.1"
tokio-stream = { version = "0.1.17", features = ["sync"] }
futures-util = "0.3.31"
nix = { version = "0.29.0", features = ["process", "signal"] }
socket2 = { version = "0.5.8", features = ["all"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
