[package]
name = "rust_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
actix-web = "4.9.0"
tokio = { version = "1.42.0", features = ["full"] }

[[bin]]
name = "axum_bench"
path = "src/bin/axum_bench.rs"

[[bin]]
name = "actix_bench"
path = "src/bin/actix_bench.rs"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
